# ask_jojo

./: .gitignore  DESIGN.md  PLAN.md  PRODUCT.md  README.md  conftest.py  docker-compose.yml  package-lock.json  pyproject.toml
.github/workflows/: ci.yml  lint-nightly.yml  qa-benchmark.yml
data/finetune/: README.md  benchmark.jsonl  v1.jsonl
docs/: budget-model.xlsx  follow-ups.md  goal-run-log.md  license-inventory.md  lint-baseline-2026-05-20.json  phase-1-exit-evidence.md  phase-1-wrap-up-checklist.md  phase-3-exec-prompt.md  phase-3-impl-plan.md  phase-5-exit-evidence.md  phase-7a-exit-evidence.md  phase-7b-exit-evidence.md  phase-7b-settings-tab-spec.md  privacy-audit.md  security-audit.md  stress-test-report.md  v2_status.md  wiki-compliance-audit.md
docs/ADR/: 0000-v2-roadmap.md  0001-wiki-over-rag.md  0002-three-repo-split.md  0003-packages-layout.md  0004-local-first-deployment.md  0005-jojo-bot-service-account.md  0006-raw-repo-privacy-invariant.md  0007-sharepoint-delegated-auth-first.md  0008-onedrive-local-mount-over-graph.md  0009-local-mode-packaging-and-dpapi-secrets.md  0010-compile-via-cowork-while-api-pending.md  0011-qa-via-cowork-while-api-pending.md  0012-onedrive-mount-supersedes-path-c.md  0013-phase-7b-standalone-workstation-installer.md  0014-finetune-strategy.md
docs/audits/: fu-20-absorb-clusters.json  fu-20-reclass-corrections.jsonl  fu-20-reclassification-summary.md  fu-20-second-pass-gap-report.md  fu-21-literature-clustering.jsonl  fu-22-summary.md  fu-22-trace.jsonl
docs/audits/absorb_assignments/: analytical-chem.json  cbl-b.json  crbn-degrader.json  kinase-targets.json  mass-spec-proteomics.json  oncology-biology.json  structural-del-protein.json  t-cell-immunology.json
docs/audits/wave_reports/: wave10_agent_jonk.json  wave10_agent_josegomez_lowconf.json  wave10_agent_josel.json  wave10_agent_lowconf2.json  wave10_aggregate.json  wave11_agent_josegomez_lowconf.json  wave11_agent_josel.json  wave11_agent_lowconf1.json  wave11_agent_lowconf_jonk.json  wave11_aggregate.json  wave12_agent_jonk_lowconf.json  wave12_agent_josegomez_lowconf.json  wave12_agent_josel.json  wave12_agent_lowconf_mixed.json  wave12_aggregate.json  wave13_agent_jonk_lowconf.json  wave13_agent_josegomez_lowconf.json  wave13_agent_josel.json  wave13_agent_lowconf_mixed.json  wave13_aggregate.json  wave14_agent_jonk_lowconf.json  wave14_agent_josegomez_lowconf.json  wave14_agent_josel.json  wave14_agent_lowconf_mixed.json  wave14_aggregate.json  wave15_agent_jonk_lowconf.json  wave15_agent_josegomez_lowconf.json  wave15_agent_josel.json  wave15_agent_lowconf_mixed.json  wave15_aggregate.json  wave16_agent_jonk_lowconf.json  wave16_agent_josegomez_lowconf.json  wave1_agent_cblb.json  wave1_agent_checkpoint.json  wave1_agent_lcms.json  wave1_agent_pkadme.json  wave1_agent_protpurif.json  wave1_agent_solubility.json  wave1_aggregate.json  wave2_agent_jakstat.json  (+49 more)
docs/compile/: compile-prompt.md  phase2-publicdrive-prompts.md  queue.md
docs/graph/: graphify-setup.md  token-reduction-report.md
docs/ops/: BUILD-AND-INSTALL.md  USER-GUIDE.md  distribution.md  offline-model.md  path-b-msal-device-code-setup.md  phase-1-staging-plan.md  redis-setup.md
docs/qa/: benchmark-batch-a.md  benchmark-batch-b.md  benchmark-batch-c.md  benchmark-questions.md  external-reviewer-pass.md  qa-prompt.md  qmd-runbook.md  queue.md
docs/qa/answers/: 2026-04-30-akta-buffer-prep-v1-routing.md  2026-04-30-cbl-b-nx1607-vs-nx0255.md  2026-04-30-del-screening-2022.md  2026-04-30-delphi-acs-releases-2025.md  2026-04-30-pellino-1-peli2-redundancy.md  2026-05-19-2025-delphi-data-quality-audit.md  2026-05-19-akta-pure25-vs-avant-v1-routing.md  2026-05-19-btk-bcr-signaling-and-program.md  2026-05-19-btk-crbn-connection.md  2026-05-19-btk-vs-irak4-program-direction.md  2026-05-19-cbl-b-chrom-column-router-stress.md  2026-05-19-cbl-b-crbn-del-chain.md  2026-05-19-cbl-b-ctm-vs-preclinical.md  2026-05-19-cbl-b-what-it-does.md  2026-05-19-cex-buffer-ph-v1-routing.md  2026-05-19-crbn-molecular-glue-vs-protac.md  2026-05-19-crbn-platform-and-tpd.md  2026-05-19-del-buffer-stability-sop.md  2026-05-19-del-library-construction.md  2026-05-19-delphi-clone-biomass-protein-model.md  2026-05-19-dsf-protein-characterization.md  2026-05-19-fem1b-target.md  2026-05-19-hibit-cell-screening-assay.md  2026-05-19-ht-expression-determination.md  2026-05-19-irak4-tlr-signaling.md  2026-05-19-irf5-autoimmune.md  2026-05-19-itk-vs-itk-ctm-merged.md  2026-05-19-loka-ml-engagement-2024.md  2026-05-19-nx1607-purif-yield-router-stress.md  2026-05-19-pellino-1-program-vs-target-pages.md  2026-05-19-pellino1-akta-buffer-prep-router-stress.md  2026-05-19-pellino1-irak4-tlr-pathway.md  2026-05-19-pellino1-publications-edge.md  2026-05-19-sec-mals-standard-run.md  (+16 more)
docs/reviews/: 2026-05-19-phase-4-review.md  2026-05-19-phase-5-review.md  2026-05-19-phase-6-review.md  2026-05-19-phase-7a-review.md  2026-05-19-phase-7b-review.md  2026-05-20-phase-8-review.md  2026-06-01-fu-20-absorb-waves-1-5-review.md  2026-06-01-fu-20-reclassification-review.md  2026-06-01-fu-22-closure.md  2026-06-03-fu-20-closure-review.md
ops/entra/: README.md  Register-JojoBotApp.ps1
ops/installer/: Build-JojoBotRelease.ps1  Build-JojoExe.ps1  Enable-JojoShell.ps1  Install-JojoBot.ps1  Install-Service.ps1  JojoBot.spec  README.txt  Uninstall-JojoBot.ps1
ops/scheduler/: .gitignore  README.md  Register-JojoBotTasks.ps1  Run-DeviceCodeLogin.ps1  Run-GraphifyRebuild.ps1  Run-LintNightly.ps1  Run-LintWeekly.ps1  Run-ScheduledSync.ps1  Unregister-JojoBotTasks.ps1
ops/service-account/: PHASE_7B_APP_SETUP.md  README.md  bot-commit.ps1  bot-identity.ps1  test-bot-identity.ps1
ops/validation/: README.md  Run-ValidationSyncAll.ps1
schema/: CLAUDE.md  taxonomy.yaml
scripts/: graph_token_benchmark.py  migrate_output_format.py
src/backend/: __init__.py  main.py
src/frontend/: .gitignore  README.md  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
tests/jojo_finetune/: test_dataset.py  test_eval.py  test_train.py
(+209 files in other folders)
