[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jojo_bot"
version = "0.1.0"
description = "JoJo Bot v2.0 — Nurix internal knowledge assistant built around a persistent LLM-compiled wiki."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mateo de los Rios", email = "mdelosrios@nurixtx.com" }]
license = { text = "Proprietary" }

# Phase 0 pins only the dev/test tooling. Per-package runtime deps land
# in Phase 1+ as each package gets implemented. See PLAN.md §3.3.
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",      # httpx transport mock for GraphClient / SharePointConnector tests
]
# Backend runtime — grown in Phase 3 when routers get their first real logic.
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "redis>=5.0",
    "rq>=1.16",
    "python-multipart>=0.0.9",    # FastAPI file-upload endpoint (Phase 1)
]
# Ingest-tier runtime — local/upload connectors + file-type converters (Phase 1).
ingest = [
    "pyyaml>=6.0",
    "mammoth>=1.7",            # .docx → markdown
    "python-pptx>=0.6.23",     # .pptx → markdown
    "openpyxl>=3.1",           # .xlsx → markdown (already used elsewhere too)
    "pymupdf>=1.24",           # .pdf → markdown
    "watchdog>=4.0",           # filesystem change detection
]
# Cloud-tier connectors — wired once IT issues MS Graph app registration (Phase 1 cont'd).
cloud = [
    "msgraph-core>=1.0",
    "azure-identity>=1.15",
    "httpx>=0.27",
]
# Web-scraping tier — NurixNet Playwright crawler (Phase 1 cont'd, needs VPN).
web = [
    "playwright>=1.42",
    "trafilatura>=1.9",
    "html2text>=2024.2.26",
]

[project.scripts]
# Each package exposes a stub CLI. Populated in the phase that owns it.
jojo-core     = "jojo_core.cli:main"
jojo-ingest   = "jojo_ingest.cli:main"
jojo-compile  = "jojo_compile.cli:main"
jojo-qa       = "jojo_qa.cli:main"
jojo-output   = "jojo_output.cli:main"
jojo-lint     = "jojo_lint.cli:main"
jojo-graph    = "jojo_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/jojo_core",
    "packages/jojo_connectors_common",
    "packages/jojo_ingest",
    "packages/jojo_compile",
    "packages/jojo_qa",
    "packages/jojo_output",
    "packages/jojo_lint",
    "packages/jojo_graph",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages", "src/backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (line-length handles this)
    "UP042", # StrEnum — we keep `class X(str, Enum)` for 3.10 dev-env compat
    "UP017", # datetime.UTC alias is 3.11+ — keep `timezone.utc` for 3.10 compat
    "B008",  # function-call in arg default — the FastAPI File/Form/Depends idiom
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["packages", "src/backend"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"
pythonpath = ["packages", "src"]
