[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jojo_bot"
version = "0.1.0"
description = "JoJo Bot v2.0 — Nurix internal knowledge assistant built around a persistent LLM-compiled wiki."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Mateo de los Rios", email = "mdelosrios@nurixtx.com" }]
license = { text = "Proprietary" }

# Phase 0 pins only the dev/test tooling. Per-package runtime deps land
# in Phase 1+ as each package gets implemented. See PLAN.md §3.3.
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-httpx>=0.30",      # httpx transport mock for GraphClient / SharePointConnector tests
    "python-docx>=1.1",        # test-only: builds sample.docx fixture for converter tests
                               # (runtime .docx reads go through mammoth, not python-docx)
]
# Backend runtime — grown in Phase 3 when routers get their first real logic.
backend = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "redis>=5.0",
    "rq>=1.16",
    "python-multipart>=0.0.9",    # FastAPI file-upload endpoint (Phase 1)
    "anthropic>=0.40",            # settings_router test-anthropic + synthesize (Phase 7b)
    "msal>=1.27",                 # settings_router device-code flow (Phase 7b)
]
# Ingest-tier runtime — local/upload connectors + file-type converters (Phase 1).
ingest = [
    "pyyaml>=6.0",
    "mammoth>=1.7",            # .docx → markdown
    "python-pptx>=0.6.23",     # .pptx → markdown
    "openpyxl>=3.1",           # .xlsx → markdown (already used elsewhere too)
    "pymupdf>=1.24",           # .pdf → markdown
    "watchdog>=4.0",           # filesystem change detection
]
# Cloud-tier connectors — wired once IT issues MS Graph app registration (Phase 1 cont'd).
cloud = [
    "msgraph-core>=1.0",
    "azure-identity>=1.15",
    "httpx>=0.27",
    "msal>=1.27",
]
# Web-scraping tier — NurixNet Playwright crawler (Phase 1 cont'd, needs VPN).
web = [
    "playwright>=1.42",
    "trafilatura>=1.9",
    "html2text>=2024.2.26",
]
# Q&A tier (Phase 4) — qmd installed dormant per PLAN.md §6 Phase 4 step 5.
# qmd ships installed but inactive; activation is gated by
# packages/jojo_qa/qmd_activation.py (index size > 200 pages, p95 latency
# > 8 s, or sustained miss-rate > 15 %). See ADR 0011 for the rationale
# and `docs/qa/qmd-runbook.md` for the activation procedure.
qa = [
    "qmd>=0.3",                # Karpathy's local BM25 + vector over markdown
    "anthropic>=0.40",         # Messages API client (lights up on FU-10)
    "pydantic>=2.6",           # PlotSpec + format-classifier types
]
# Lint tier (Phase 6) — wiki schema, orphan, stub, wikilink, bloat, quote-budget checks.
# PyYAML is already in [ingest]; listed here for clarity so ``pip install .[lint]``
# gives a fully self-contained install for CI-only runs.
lint = [
    "pyyaml>=6.0",
]
# Fine-tune tier (Phase 8) — dataset generation, Bedrock/HF training, eval harness.
finetune = [
    "boto3>=1.26",
    "peft>=0.10",
    "transformers>=4.40",
    "trl>=0.8",
    "datasets>=2.18",
]
# Desktop launcher — native Qt window (QWebEngineView) instead of browser tab.
# Requires Python 3.11+ and WebView2 runtime (ships with Windows 10/11 since 2022).
desktop = [
    "PySide6>=6.7",         # Qt6 native window with embedded Chromium engine
]
# Rich-output tier (Phase 5) — matplotlib sandbox + docx/pptx/pdf renderers.
# All deterministic; no model dependency. The matplotlib subprocess
# enforces resource limits (30 s CPU, 512 MB RAM) per
# packages/jojo_output/sandbox/runner.py.
output = [
    "matplotlib>=3.8",         # static charts via the sandbox
    "numpy>=1.26",             # required by matplotlib + heatmap rendering
    "pandas>=2.2",             # data wrangling for chart specs (optional, not core)
    "seaborn>=0.13",           # statistical chart shortcuts (optional)
    "plotly>=5.20",            # interactive HTML-fragment charts
    "python-docx>=1.1",        # docx renderer (also used in [dev] for fixture builds)
    "python-pptx>=0.6.23",     # pptx renderer (also in [ingest] for converter)
    "weasyprint>=61",          # PDF rendering (HTML/CSS -> PDF)
    "markdown>=3.6",           # Markdown -> HTML for the PDF path
]

[project.scripts]
# Each package exposes a stub CLI. Populated in the phase that owns it.
jojo-core     = "jojo_core.cli:main"
jojo-ingest   = "jojo_ingest.cli:main"
jojo-compile  = "jojo_compile.cli:main"
jojo-qa       = "jojo_qa.cli:main"
jojo-output   = "jojo_output.cli:main"
jojo-lint     = "jojo_lint.cli:main"
jojo-graph    = "jojo_graph.cli:main"
jojo-finetune = "jojo_finetune.cli:main"
jojo-launcher = "jojo_launcher.__main__:main"

[tool.hatch.build.targets.wheel]
packages = [
    "packages/jojo_core",
    "packages/jojo_connectors_common",
    "packages/jojo_ingest",
    "packages/jojo_compile",
    "packages/jojo_qa",
    "packages/jojo_output",
    "packages/jojo_lint",
    "packages/jojo_graph",
    "packages/jojo_finetune",
    "packages/jojo_launcher",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["packages", "src/backend"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (line-length handles this)
    "UP042", # StrEnum — we keep `class X(str, Enum)` for 3.10 dev-env compat
    "UP017", # datetime.UTC alias is 3.11+ — keep `timezone.utc` for 3.10 compat
    "B008",  # function-call in arg default — the FastAPI File/Form/Depends idiom
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["packages", "src/backend"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-ra -q"
pythonpath = ["packages", "src"]
markers = [
    "benchmark: marks tests as benchmark-only (nightly QA run, skipped in CI)",
]
